<resources>
    <string name="app_name">CGCPR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_event">Event Registration</string>
    <string name="menu_inquiry">Inquiry</string>

    <string name="cnotice">College Notice</string>
    <string name="department_notice">Department Notice</string>
    <string name="blank">----</string>
    <string name="more_options">More Options</string>
    <string name="ptu">PTU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="select_to_proceed">Select to proceed</string>
    <string name="exit">Exit</string>
    <string name="exitStatement">Do you want to exit application?</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="exit_detail">Are you sure you want to exit? Click exit to exit the application</string>
    <string name="event_registration">Event Registration</string>
    <string name="inquiry">Inquiry</string>
    <string name="syllabus">Syllabus</string>
    <string name="previous_yr_p">Previous Year Paper</string>
    <string name="yes">Yes</string>
    <string name="download_file">download file</string>
    <string name="download_title">download title</string>
    <string name="underscore">---------------------------</string>
    <string name="logout">LogOut</string>
    <string name="ptu_notices">PTU Notices:</string>
    <string name="menu_ptu_notice">PTU Notices</string>
    <string name="menu_examform">Exam Form</string>
    <string name="menu_ptuenquiry">PTU Enquiries</string>
    <string name="menu_resultndocument"><![CDATA[Result & Documents]]></string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_in_to_continue">Sign-In to continue</string>
    <string name="cgc_signin">CGC Sign-In</string>
    <string name="ptu_roll">roll number / login id</string>
    <string name="password">Password</string>
    <string name="log_in">Log-in</string>
    <string name="tnc">................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................</string>
    <string name="AuthActivity">AuthActivity</string>
    <string name="write_you_enquiry_here">Write you enquiry here......</string>
    <string name="upload">Upload</string>
    <string name="uploadasset">Upload Assets</string>
    <string name="writehere">write here.....</string>
    <string name="supportDoc">Attach Supporting Document</string>
    <string name="required_fields">Required Fields:</string>
    <string name="titlehere">write title here.....</string>
    <string name="title">Title:</string>
    <string name="content">Content:</string>
    <string name="menu_upload">Upload</string>
    <string name="utility">Utility</string>
    <string name="linkhere">paste link here....</string>
    <string name="link">Link:</string>
    <string name="titlelink">Title, Link.</string>
    <string name="titlecontent">Title, Content.</string>
    <string name="full_name">Full Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="details">Details</string>
    <string name="authenticating_user">Authenticating User...\nWait for a while</string>
    <string name="menu_account">Account</string>
    <string name="menu_setting">Setting</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup">SignUp</string>
    <string name="cpassword">Confirm Password</string>
    <string name="email">E-Mail</string>
    <string name="bts">Back to SignIn</string>
    <string name="TandC">Terms and Condition*</string>
    <string name="TandC1">By Login you Accept All the Terms And Conditions.</string>
    <string name="TandC2">All rights are reserved by the developer.</string>
    <string name="TandC3">If the user found  misusing of this app for any purpose then he/she may banned by our moderators of this App and suspended for future EVENTS which will held by this App.</string>
    <string name="TandC4">For evaluation of test we will collect data of Quiz.</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="registerAs">Register as New User</string>
    <string name="changePass">Change Password</string>
    <string name="changePassDescrip">Enter your registered E-Mail ID</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="get_otp">Get OTP</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="openMail">Open Mail Inbox</string>
    <string name="loading">Loading.....</string>
    <string name="swipe_down">Swipe Down⬇ to Refresh this page!</string>
    <string name="notice">Notice</string>
    <string name="clickToView">Click to view Attached Document</string>
    <string name="attachment">Attachment</string>

</resources>