<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.phone.PhoneLoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen"
        android:elevation="@dimen/twenty"
        app:cardElevation="@dimen/twenty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/twenty"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight"
                    android:text="@string/sign_in"
                    android:textColor="@color/cgc_blue"
                    android:textSize="@dimen/thirtysp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five"
                    android:layout_marginBottom="@dimen/twenty"
                    android:text="@string/sign_in_to_continue" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:maxHeight="@dimen/hundered_ten"
                    app:srcCompat="@drawable/cgc_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:gravity="center"
                    android:paddingBottom="@dimen/sixteen"
                    android:text="@string/cgc_signin"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/five">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/phoneNumET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/enter_mobile"
                        android:inputType="number"
                        android:textSize="@dimen/twentysp"
                        tools:ignore="TextFields" />

                </TableRow>

                <Button
                    android:id="@+id/sendOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_otp"
                    android:layout_marginTop="@dimen/five"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bts" />

                <TextView
                    android:layout_marginTop="@dimen/sixteen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC2" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC4" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>