<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.main.InquiryFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:background="@color/cgc_blue"
        android:padding="@dimen/eight"
        android:text="@string/inquiry"
        android:textColor="@color/white"
        android:textSize="@dimen/seventeensp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        app:cardBackgroundColor="@color/cgc_blue" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/eight"
            android:background="@color/white">

            <Spinner
                android:id="@+id/optionInquiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cgc_blue"
                android:popupBackground="@color/cgc_blue"
                android:backgroundTintMode="multiply"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                style="@style/spinnerTheme"
                android:layout_margin="@dimen/eight"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:layout_marginStart="@dimen/twelve"
                android:layout_marginEnd="@dimen/eight"
                android:textColor="@color/black"
                android:text="@string/content" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/write_you_enquiry_here"
                android:gravity="start|top"
                android:textColor="@color/black"
                android:inputType="textMultiLine"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginEnd="@dimen/eight"
                android:layout_marginStart="@dimen/eight"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>