<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.utility.UploadFragment"
    android:id="@+id/uploadFragmentLL"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:background="@color/cgc_blue"
            android:padding="@dimen/eight"
            android:text="@string/uploadasset"
            android:textColor="@color/white"
            android:textSize="@dimen/seventeensp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginBottom="@dimen/eight"
            app:cardBackgroundColor="@color/cgc_blue" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/eight"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/hundered_ten"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:orientation="vertical">

                            <Spinner
                                android:id="@+id/optionsUpload"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/spinnerTheme"
                                android:layout_margin="@dimen/eight"
                                android:background="@android:drawable/btn_dropdown"
                                android:backgroundTint="@color/cgc_blue"
                                android:backgroundTintMode="multiply"
                                android:popupBackground="@color/cgc_blue"
                                android:spinnerMode="dropdown" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1px"
                                android:layout_marginStart="@dimen/sixteen"
                                android:layout_marginEnd="@dimen/sixteen"
                                android:background="@color/black"/>

                            <LinearLayout
                                android:id="@+id/titlell"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/eight"
                                android:orientation="vertical"
                                android:visibility="visible">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/four"
                                    android:text="@string/title"
                                    android:textColor="@color/black" />

                                <EditText
                                    android:id="@+id/titleET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:gravity="start|top"
                                    android:hint="@string/titlehere"
                                    android:inputType="textPersonName" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/contentll"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/eight"
                                android:orientation="vertical"
                                android:visibility="visible">

                                <TextView
                                    android:id="@+id/contentTV"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/four"
                                    android:text="@string/content"
                                    android:textColor="@color/black" />

                                <EditText
                                    android:id="@+id/announcementET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:gravity="start|top"
                                    android:hint="@string/writehere"
                                    android:inputType="textMultiLine"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/addCV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/eight"
                                android:visibility="visible"
                                app:cardBackgroundColor="@color/black">

                                <TableRow
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/eight">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:src="@drawable/add" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_weight="1"
                                        android:text="@string/supportDoc"
                                        android:textColor="@color/white" />
                                </TableRow>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/attachedDocCV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/eight"
                                android:visibility="gone"
                                app:cardBackgroundColor="@color/grey_two"
                                app:cardCornerRadius="@dimen/sixteen"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent">

                                <TableRow
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/eight">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:src="@drawable/attachment" />

                                    <TextView
                                        android:id="@+id/attachedDocNameTV"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_weight="1"
                                        android:textColor="@color/white" />
                                </TableRow>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/five"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TableRow
                        android:id="@+id/requiredRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/sixteen"
                        android:layout_marginEnd="@dimen/sixteen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/required_fields"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/requiredFieldTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/eight"
                            android:text="@string/blank"
                            android:textColor="@color/black" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/eight"
                        android:layout_marginBottom="@dimen/eight"
                        android:layout_marginStart="@dimen/sixteen"
                        android:layout_marginEnd="@dimen/sixteen"
                        android:background="@color/black"/>

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/uploadFab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/sixteen"
                        android:backgroundTint="@color/cgc_orange"
                        android:clickable="true"
                        android:src="@drawable/add"
                        android:text="@string/upload"
                        app:icon="@drawable/ic_baseline_cloud_upload_24" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>